--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Gtk2-OSXApplication
-version:            0.01
+version:            0.02
 abstract:           Perl extension for blah blah blah
 author:
     - fam. Oesterholt <oesterholt@apple.com>
@@ -10,7 +10,8 @@ configure_requires:
     ExtUtils::MakeMaker:  0
 build_requires:
     ExtUtils::MakeMaker:  0
-requires:  {}
+requires:
+    Gtk2:  1.2
 no_index:
     directory:
         - t
