Import of OESTERHOL/Gtk2-OSXApplication-0.03 from CPAN.
gitpan-cpan-distribution: Gtk2-OSXApplication
gitpan-cpan-version:      0.03
gitpan-cpan-path:         OESTERHOL/Gtk2-OSXApplication-0.03.tar.gz
gitpan-cpan-author:       OESTERHOL
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 --- #YAML:1.0
 name:               Gtk2-OSXApplication
-version:            0.02
-abstract:           Perl extension for blah blah blah
+version:            0.03
+abstract:           Perl extension for mac integration code GtkOSXApplication
 author:
     - fam. Oesterholt <oesterholt@apple.com>
 license:            unknown
